fix version semantics

--- a/Assets/BaseBuilderCore/package.json
+++ b/Assets/BaseBuilderCore/package.json
@@ -1,6 +1,6 @@
 {
     "name": "com.brilliantn.basebuildercore",
-    "version": "0.1.0",
+    "version": "0.1.1",
     "displayName": "Base Builder Core",
     "description": "Hex grid based network force-driven graph built with ECS.",
     "keywords": [
@@ -13,7 +13,7 @@
         "Node",
         "Network"
     ],
-    "unity": "2020.3",
+    "unity": ">=2020.3",
     "homepage": "https://brilliantn.com/",
     "bugs": {
         "url": "https://github.com/Darth-Carrotpie/BaseBuilderCore/issues"
@@ -23,9 +23,9 @@
         "url": "https://github.com/Darth-Carrotpie/BaseBuilderCore.git"
     },
     "dependencies": {
-        "com.unity.entities": "^1.2.1",
-        "com.unity.entities.graphics": "^1.2.1",
-        "com.unity.textmeshpro": "^3.0.9"
+        "com.unity.entities": ">=1.2.1",
+        "com.unity.entities.graphics": ">=1.2.1",
+        "com.unity.textmeshpro": ">=3.0.9"
     },
     "scopedRegistries": [
         {
